--- a/.travis.yml
+++ b/.travis.yml
@@ -28,15 +28,14 @@ after_success:
 
 matrix:
   include:
+    - python: "3.7"
+      dist: xenial
+      sudo: true
     - stage: docker
       python: "3.6"
       services:
         - docker
       script: ./docker/build.sh
-    - stage: optional
-      python: "3.7"
-      dist: xenial
-      sudo: true
     - stage: optional
       python: "3.8-dev"
       dist: xenial
