docker: refactor Dockerfiles to reduce their size
* Base image switched to debian:buster-slim to reduce the size of the
  images (python:3 base images is fat). Each image is now ~500M instead of
  ~1G.
* Introduce a labgrid-base image since the build-dependencies are common
  to all images.
* Use buildkit backend to slightly speed up the docker build time.
* Upgrade Travis CI dist to latest LTS (from Xenial to Bionic), since
  Xenial doesn't support buildkit.

Signed-off-by: Fathi Boudra <fathi.boudra@linaro.org>

--- a/docker/coordinator/Dockerfile
+++ b/docker/coordinator/Dockerfile
@@ -1,14 +1,14 @@
-FROM python:3.7
-MAINTAINER eha@deif.com
-
-RUN mkdir -p /opt/labgrid
-COPY ./ /opt/labgrid/
-RUN cd /opt/labgrid \
- && pip install -r crossbar-requirements.txt \
- && python setup.py install
-
-VOLUME /opt/crossbar
-EXPOSE 20408
+FROM labgrid-base
 
 ENV CROSSBAR_DIR=/opt/crossbar
+
+RUN set -e ;\
+    cd /opt/labgrid ;\
+    pip3 install --no-cache-dir -r crossbar-requirements.txt ;\
+    python3 setup.py install
+
+VOLUME /opt/crossbar
+
+EXPOSE 20408
+
 CMD ["crossbar", "start", "--config", "/opt/labgrid/.crossbar/config.yaml"]
