--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,8 @@ dependencies = [
     "ansicolors>=1.1.8",
     "attrs>=21.4.0",
     "autobahn>=21.3.1",
+    "grpcio==1.64.1",
+    "protobuf>=5.27.0",
     "jinja2>=3.0.2",
     "pexpect>=4.8.0",
     "pyserial-labgrid>=3.4.0.1",
@@ -123,6 +125,9 @@ dev = [
     "pytest-isort>=2.0.0",
     "pytest-mock>=3.6.1",
     "pylint>=3.0.0",
+
+    # GRPC Protobuf compiler
+    "grpcio-tools==1.64.1",
 ]
 
 [project.scripts]
@@ -130,6 +135,7 @@ labgrid-autoinstall = "labgrid.autoinstall.main:main"
 labgrid-client = "labgrid.remote.client:main"
 labgrid-exporter = "labgrid.remote.exporter:main"
 labgrid-suggest = "labgrid.resource.suggest:main"
+labgrid-coordinator = "labgrid.remote.grpc_coordinator:main"
 
 # the following makes a plugin available to pytest
 [project.entry-points.pytest11]
