pyproject.toml: fix coordinator entrypoint
Signed-off-by: Jan Luebbe <jlu@pengutronix.de>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,7 +135,7 @@ labgrid-autoinstall = "labgrid.autoinstall.main:main"
 labgrid-client = "labgrid.remote.client:main"
 labgrid-exporter = "labgrid.remote.exporter:main"
 labgrid-suggest = "labgrid.resource.suggest:main"
-labgrid-coordinator = "labgrid.remote.grpc_coordinator:main"
+labgrid-coordinator = "labgrid.remote.coordinator:main"
 
 # the following makes a plugin available to pytest
 [project.entry-points.pytest11]
