--- a/.github/workflows/reusable-unit-tests.yml
+++ b/.github/workflows/reusable-unit-tests.yml
@@ -68,4 +68,7 @@ jobs:
         # check README.rst separately
         pip install rstcheck
         rstcheck --ignore-languages=bash --report-level=WARNING README.rst
-    - uses: codecov/codecov-action@v3
+    - uses: codecov/codecov-action@v4
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true
