github/workflows: set the python version as a codecov flag
Signed-off-by: Jan Luebbe <jlu@pengutronix.de>

--- a/.github/workflows/reusable-unit-tests.yml
+++ b/.github/workflows/reusable-unit-tests.yml
@@ -63,6 +63,7 @@ jobs:
       uses: codecov/codecov-action@v4
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
+        flags: ${{ inputs.python-version }}
     - name: Build documentation
       run: |
         make -C doc clean
